# sicilian_oven_cli

./: .mailmap  Cargo.toml  README.md  build.rs
data/: cities.json  cities.rs
src/: cities.rs  constants.rs  helper_functions.rs  main.rs
src/types/: car.rs  challenge.rs  city.rs  medal.rs  mod.rs
src/types/car/: car.rs  chassis.rs  engine.rs  gearbox.rs  mod.rs  tire.rs
src/types/car_parts/: car.rs  chassis.rs  engine.rs  gearbox.rs  mod.rs  tire.rs
