[package]
name = "sicilian_oven"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = "0.11.0"
lazy_static = "1.4.0"
strum = { version = "0.26.2", features = ["derive"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"

[build-dependencies]
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
