[package]
name = "sicilian_oven"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = "0.11.0"
lazy_static = "1.4.0"
rand = { version = "0.8.5", features = ["alloc"] }
rand_pcg = "0.3.1"
rand_seeder = "0.2.3"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
strum = { version = "0.26.2", features = ["derive"] }
